[gd_scene load_steps=3 format=1]

[ext_resource path="res://GUI/TextEffectsGUI.gd" type="Script" id=1]
[ext_resource path="res://TextEffects/SingleLineLabelFX.tscn" type="PackedScene" id=2]

[node name="MainScreen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 122.0
script/script = ExtResource( 1 )

[node name="SingleLineLabelFX" parent="." instance=ExtResource( 2 )]

margin/left = 2.0
margin/top = 1.0
margin/right = 202.0
margin/bottom = 123.0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 675.0
margin/top = 4.0
margin/right = 896.0
margin/bottom = 591.0

[node name="MainGrid" type="GridContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 8.0
margin/top = 11.0
margin/right = 208.0
margin/bottom = 580.0
custom_constants/vseparation = 10
columns = 1

[node name="PositionGrid" type="GridContainer" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 24.0
columns = 2

[node name="PosX" type="LineEdit" parent="Panel/MainGrid/PositionGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 98.0
margin/bottom = 24.0
placeholder/text = "X - 100"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="PosY" type="LineEdit" parent="Panel/MainGrid/PositionGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 102.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 24.0
placeholder/text = "Y - 100"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="TextBox" type="LineEdit" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 34.0
margin/right = 200.0
margin/bottom = 58.0
placeholder/text = "Your text here"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="DelayUpdateButton" type="CheckButton" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 68.0
margin/right = 200.0
margin/bottom = 90.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Delay Refresh"
flat = false
align = 0

[node name="RainbowGrid" type="GridContainer" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 200.0
margin/bottom = 258.0
custom_constants/vseparation = 10
columns = 1

[node name="RainbowButton" type="CheckButton" parent="Panel/MainGrid/RainbowGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Rainbow"
flat = false
align = 0

[node name="RFrequency" type="LineEdit" parent="Panel/MainGrid/RainbowGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 32.0
margin/right = 200.0
margin/bottom = 56.0
placeholder/text = "Frequency - 0.3"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="RIncrement" type="LineEdit" parent="Panel/MainGrid/RainbowGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 66.0
margin/right = 200.0
margin/bottom = 90.0
placeholder/text = "Increment - 0.2"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="RWidth" type="LineEdit" parent="Panel/MainGrid/RainbowGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 200.0
margin/bottom = 124.0
placeholder/text = "Width - 127"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="RCenter" type="LineEdit" parent="Panel/MainGrid/RainbowGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 134.0
margin/right = 200.0
margin/bottom = 158.0
placeholder/text = "Center - 128"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="TypewriterGrid" type="GridContainer" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 268.0
margin/right = 200.0
margin/bottom = 328.0
columns = 1

[node name="TypewriterButton" type="CheckButton" parent="Panel/MainGrid/TypewriterGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Typewriter"
flat = false
align = 0

[node name="Label" type="Label" parent="Panel/MainGrid/TypewriterGrid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 26.0
margin/right = 200.0
margin/bottom = 40.0
text = "Speed"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TWDelay" type="HSlider" parent="Panel/MainGrid/TypewriterGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 44.0
margin/right = 200.0
margin/bottom = 60.0
range/min = 0.0
range/max = 10.0
range/step = 0.5
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="ShakeGrid" type="GridContainer" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 338.0
margin/right = 200.0
margin/bottom = 398.0
columns = 1

[node name="ShakeButton" type="CheckButton" parent="Panel/MainGrid/ShakeGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Shake"
flat = false
align = 0

[node name="Label" type="Label" parent="Panel/MainGrid/ShakeGrid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 26.0
margin/right = 200.0
margin/bottom = 40.0
text = "Offset"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShakeOffset" type="HSlider" parent="Panel/MainGrid/ShakeGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 44.0
margin/right = 200.0
margin/bottom = 60.0
range/min = 1.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SineWaveGrid" type="GridContainer" parent="Panel/MainGrid"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 408.0
margin/right = 200.0
margin/bottom = 544.0
columns = 1

[node name="SineWaveButton" type="CheckButton" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Wave"
flat = false
align = 0

[node name="Label" type="Label" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 26.0
margin/right = 200.0
margin/bottom = 40.0
text = "Frequency"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SWFrequency" type="HSlider" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 44.0
margin/right = 200.0
margin/bottom = 60.0
range/min = 1.0
range/max = 25.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Label1" type="Label" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 64.0
margin/right = 200.0
margin/bottom = 78.0
text = "Amplitude"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SWAmplitude" type="HSlider" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 82.0
margin/right = 200.0
margin/bottom = 98.0
range/min = 1.0
range/max = 50.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Label2" type="Label" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 102.0
margin/right = 200.0
margin/bottom = 116.0
text = "Delay"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SWDelay" type="HSlider" parent="Panel/MainGrid/SineWaveGrid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 120.0
margin/right = 200.0
margin/bottom = 136.0
range/min = 0.01
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.01
range/exp_edit = true
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2


